src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__php_simple_function.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 1,
  "value": 0,
  "average": 1.0,
  "min": 0,
  "max": 1
}
