src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__ruby_else_if_chain.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 4,
  "value": 0,
  "average": 4.0,
  "min": 0,
  "max": 4
}
