src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__ruby_no_cognitive.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 0,
  "average": 0.0,
  "min": 0,
  "max": 0
}
