src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__ruby_sequence_different_booleans.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 3,
  "value": 0,
  "average": 3.0,
  "min": 0,
  "max": 3
}
