src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__tcl_1_level_nesting.snap
---
source: src/metrics/cognitive.rs
assertion_line: 3299
expression: metric.cognitive
---
{
  "sum": 3.0,
  "average": 3.0,
  "min": 0.0,
  "max": 3.0
}
