src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__tcl_catch_cognitive.snap
---
source: src/metrics/cognitive.rs
assertion_line: 3338
expression: metric.cognitive
---
{
  "sum": 3.0,
  "average": 3.0,
  "min": 0.0,
  "max": 3.0
}
