src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__tcl_if_elseif_else.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 3,
  "average": 3.0,
  "min": 0,
  "max": 3
}
