src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__tcl_nested_procedure_cognitive.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 2,
  "average": 1.0,
  "min": 0,
  "max": 2
}
