src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__tcl_no_cognitive.snap
---
source: src/metrics/cognitive.rs
assertion_line: 3214
expression: metric.cognitive
---
{
  "sum": 0.0,
  "average": null,
  "min": 0.0,
  "max": 0.0
}
