src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__tcl_not_booleans.snap
---
source: src/metrics/cognitive.rs
assertion_line: 3281
expression: metric.cognitive
---
{
  "sum": 2.0,
  "average": 2.0,
  "min": 0.0,
  "max": 2.0
}
